# tennis-grand-slam-predictor

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_exploratory_data_analysis.ipynb
tennis_grand_slam_predictor/: __init__.py  dataset.py  features.py  plots.py
tennis_grand_slam_predictor/modeling/: predict.py  train.py
